FIX: Reduce spacing on header [619]

--- a/common/common.scss
+++ b/common/common.scss
@@ -9,6 +9,9 @@ html {
   height:100%;
 }
 
+#main-outlet{
+    padding-top: 1em;
+}
 .topic-list-header {
     font-family: 'Nunito Sans', sans-serif;
 }
